# klok

./: CMakeLists.txt  compile.sh  prj.conf  readme.md
boards/: stm32f429i_disc1.overlay
src/: char_utils.h  characters.h  clock.c  display.c  display.h  led.c  led.h  main.c
